# breez-liquid-sdk

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  startup-network.sh
.github/workflows/: build-bindings-android.yml  build-bindings-darwin.yml  build-bindings-ios.yml  build-bindings-linux.yml  build-bindings-windows.yml  build-language-bindings.yml  main.yml  publish-all-platforms.yml  publish-android.yml  publish-flutter.yml  publish-golang.yml  publish-python.yml  publish-swift.yml
cfg/: bitcoin.conf  swapper-ln-config  user-ln-config
cli/src/: commands.rs
lib/bindings/: makefile  uniffi.toml
lib/bindings/langs/csharp/: README.md
lib/bindings/langs/csharp/src/: .gitignore  Breez.Liquid.Sdk.csproj
lib/bindings/langs/csharp/test/: Program.cs  sdk-cs-demo.csproj
lib/bindings/langs/flutter/: README.md  justfile  melos.yaml
lib/bindings/langs/flutter/breez_liquid_sdk/include/: breez_liquid_sdk.h
lib/bindings/src/: breez_liquid_sdk.udl  breez_sdk_liquid.udl  lib.rs
lib/bindings/tests/: test_generated_bindings.rs
lib/bindings/tests/bindings/: test_breez_liquid_sdk.cs
lib/bindings/tests/bindings/csharp/: Program.cs  sdk-cs-demo.csproj
lib/bindings/tests/bindings/golang/: .gitignore  test_breez_liquid_sdk.go
lib/core/: Cargo.toml
lib/core/src/: bindings.rs  chain.rs  chain_swap.rs  error.rs  frb_generated.io.rs  frb_generated.rs  lib.rs  model.rs  sdk.rs  send_swap.rs  utils.rs
lib/core/src/frb/: bridge.io.rs  bridge.rs
lib/core/src/swapper/: mod.rs
src/: lib.rs  simulator.rs  utils.rs
(+2 files in other folders)
