[package]
name = "breez-liquid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
lwk_common = "0.2.0"
lwk_signer = "0.2.0"
lwk_wollet = "0.2.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
env_logger = "0.11.2"
cln-rpc = "0.1.7"
bitcoincore-rpc = "0.18.0"
log = "0.4.20"
async-mutex = "1.4.0"
elements = "0.24.1"
uuid = { version = "1.7.0", features = ["v4"] }
